--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "selinux-sys"
 description = "Flexible Mandatory Access Control (MAC) for Linux"
-version = "0.3.1" # Remember to update `html_root_url`.
+version = "0.4.0" # Remember to update `html_root_url`.
 authors = ["Koutheir Attouchi <koutheir@gmail.com>"]
 edition = "2018"
 readme = "README.md"
@@ -14,8 +14,13 @@ repository = "https://github.com/koutheir/selinux-sys"
 documentation = "https://docs.rs/selinux-sys"
 
 [build-dependencies]
-pkg-config = { version = "0.3"  }
-bindgen    = { version = "0.58" }
+bindgen = { version = "0.58" }
+walkdir = { version = "2.3"  }
+dunce   = { version = "1.0" }
+cc      = { version = "1.0" }
+
+[features]
+static = []
 
 [package.metadata.docs.rs]
 default-target = "x86_64-unknown-linux-gnu"
