Exposed the `getseuser()` API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "selinux-sys"
 description = "Flexible Mandatory Access Control (MAC) for Linux"
-version = "0.4.0" # Remember to update `html_root_url`.
+version = "0.4.1" # Remember to update `html_root_url`.
 authors = ["Koutheir Attouchi <koutheir@gmail.com>"]
 edition = "2018"
 readme = "README.md"
 license = "MIT"
-keywords = [ "selinux", "security", "access-control" ]
-categories = [ "external-ffi-bindings", "filesystem", "os" ]
+keywords = [ "selinux", "security", "access-control", "linux", "filesystem" ]
+categories = [ "external-ffi-bindings", "filesystem", "os", "os::linux-apis" ]
 build = "build.rs"
 links = "selinux"
 repository = "https://github.com/koutheir/selinux-sys"
